# example-alloy-error

./: README.md
contracts/src/: Counter.sol
contracts/test/: Counter.t.sol
rust/: Cargo.toml  README.md
rust/src/: alloy.rs  ethers.rs
